Add update script
This script copies the old history to each activity.
This way the user has the previous history in each activity.

--- a/krunner/update/CMakeLists.txt
+++ b/krunner/update/CMakeLists.txt
@@ -6,5 +6,8 @@ add_executable(krunnerglobalshortcuts ${krunnerglobalshortcuts_SRCS})
 
 target_link_libraries(krunnerglobalshortcuts KF5::CoreAddons KF5::Service KF5::Runner KF5::ConfigCore KF5::GlobalAccel KF5::XmlGui)
 
-install(TARGETS krunnerglobalshortcuts DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin/)
-install(FILES krunnerglobalshortcuts.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
+add_executable(krunnerhistory krunnerhistory.cpp)
+target_link_libraries(krunnerhistory KF5::Runner KF5::ConfigCore KF5::Activities)
+
+install(TARGETS krunnerglobalshortcuts krunnerhistory DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin/)
+install(FILES krunnerglobalshortcuts.upd krunnerhistory.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
